--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
     <h1>Clark Alms Bio</h1>
+    <img src="London.JPG">
     <style>
         
            
