--- a/index.html
+++ b/index.html
@@ -18,29 +18,41 @@
         <div>
             <section>
                 <h1>Clark Alms</h1>
-                <nav>
-                    <a href="index.html">About</a>
-                    <a href="index.html">Portfolio</a>
-                    <a href="index.html">Contact</a>
+                <nav class="topmenu">
+                    <a id="navabout" href="index.html">About</a>
+                    <a id="navportfolio" href="portfolio.html">Portfolio</a>
+                    <a id="navcontact" href="contact.html">Contact</a>
                 </nav>
             </section>
         </div>
 
     </header>
     <section id="content" class="clearfix">
-        
-        <h2 style="color:teal;">About Me</h2>
-        <img src="London.JPG" alt="Profile Picture">
-        <p>Information about me.</p>
-        <p>More information about me.</p>
 
+        <h1 class="about">About Me</h1>
+        <img src="London.JPG" alt="Profile Picture">
+        <p id="p1">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit anim id est laborum."</p>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum."</p>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum."</p>
 
     </section>
     <footer class="footer">
         <div>
             <section class="copyright">
-        
-              <h3>Copyright&copy;</h3>  
+
+                <h3>Copyright &copy; 2019</h3>
             </section>
         </div>
     </footer>
