added contact form

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     <section id="content" class="clearfix">
 
-        <h1 class="about">About Me</h1>
+        <h1 class="contenttitle">About Me</h1>
         <img src="London.JPG" alt="Profile Picture">
         <p id="p1">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
