completed portfolio and contact pages

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/index.css">
     <link rel="stylesheet" href="assets/css/footer.css">
+    <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
     <!-- <link rel="stylesheet" href="assets/css/reset.css" -->
 </head>
 
@@ -30,7 +31,7 @@
     <section id="content" class="clearfix">
 
         <h1 class="contenttitle">About Me</h1>
-        <img src="London.JPG" alt="Profile Picture">
+        <img id="pp" src="London.JPG" alt="Profile Picture">
         <p id="p1">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
             ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
