--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/index.css">
     <link rel="stylesheet" href="assets/css/footer.css">
+    <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
     <!-- <link rel="stylesheet" href="assets/css/reset.css" -->
 </head>
 
@@ -29,23 +30,24 @@
     </header>
     <section id="content" class="clearfix">
 
-        <h1 class="about">About Me</h1>
-        <img src="London.JPG" alt="Profile Picture">
-        <p id="p1">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-            mollit anim id est laborum."</p>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum."</p>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum."</p>
+        <h1 class="contenttitle">Portfolio</h1>
+        <div class="flex-container">
+            <div img id="pimg1" src="../images/pimg1.jpg" alt="hangman">
+                <h4 class="hangman">Hangman</h4>
+            </div>
+            <div id=pimg2 src="../images/pimg2.jpg" alt="rpg-game">
+                <h4 class="rpg-game">RPG Game</h4>
+            </div>
+            <div id=pimg3 src="../images/pimg3" alt="trivia">
+                <h4 class="trivia">Trivia</h4>
+            </div>
+            <div id=pimg4 src="../images/pimg4" alt="rutgers">
+                <h4 class="rutgers">Rutgers Info Widget</h4>
+            </div>
+            <div id=pimg5 src="../images/pimg5" alt="rockpaperscissors">
+                <h4 class="rockpaperscissors">Rock Paper Scissors</h4>
+            </div>
+        </div>
 
     </section>
     <footer class="footer">
