fixed errors in the portfolio imgs

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,19 +32,19 @@
 
         <h1 class="contenttitle">Portfolio</h1>
         <div class="flex-container">
-            <div img id="pimg1" src="../images/pimg1.jpg" alt="hangman">
+            <div img id="pimg1">
                 <h4 class="hangman">Hangman</h4>
             </div>
-            <div id=pimg2 src="../images/pimg2.jpg" alt="rpg-game">
+            <div id="pimg2">
                 <h4 class="rpg-game">RPG Game</h4>
             </div>
-            <div id=pimg3 src="../images/pimg3" alt="trivia">
+            <div id="pimg3">
                 <h4 class="trivia">Trivia</h4>
             </div>
-            <div id=pimg4 src="../images/pimg4" alt="rutgers">
+            <div id="pimg4">
                 <h4 class="rutgers">Rutgers Info Widget</h4>
             </div>
-            <div id=pimg5 src="../images/pimg5" alt="rockpaperscissors">
+            <div id="pimg5">
                 <h4 class="rockpaperscissors">Rock Paper Scissors</h4>
             </div>
         </div>
