fixed portfolio img errors

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
 
         <h1 class="contenttitle">Portfolio</h1>
         <div class="flex-container">
-            <div img id="pimg1">
+            <div id="pimg1">
                 <h4 class="hangman">Hangman</h4>
             </div>
             <div id="pimg2">
